# nc_expanding_sam

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: 1 - ESAM_tutorial.ipynb  2 - Experiment_A_sub_pattern - Run.ipynb  3 - Experiment_A_sub_pattern - Plot Figs 9 and 10.ipynb  4 - Experiment_B_sub_pattern - Run.ipynb  5 - Experiment_B_sub_pattern - Plot Figs 11 12 and 13.ipynb  6 - Experiment_B_modulation - Run.ipynb  7 - Experiment_B_modulation - Plot Fig 14.ipynb  8 - Experiment_B_all_opts - Run.ipynb  9 - Experiment_B_all_opts - Plot Fig 15.ipynb
examples/experiment_results/experiment_A_sub_pattern/: hoffmann_paper.xlsx  opt_conns.xlsx  opt_thresh.xlsx  opt_thresh_conns.xlsx  original.xlsx
examples/experiment_results/experiment_B_all_no_opts/: no_opt_full_mod.xlsx  no_opt_no_inhib.xlsx  no_opt_partial_mod.xlsx
examples/experiment_results/experiment_B_all_opts/: fully_optimised_full_mod.xlsx  fully_optimised_no_inhib.xlsx  fully_optimised_partial_mod.xlsx
examples/experiment_results/experiment_B_modulation_e/: opt_conns.xlsx  original.xlsx
hyperparameter_data/: hidden_neuron_activations.xlsx
src/: binary_esam.py  esam_reporter.py
src/data_generation/: data_generator.py
src/impl/: connections.py  hidden_neuron_population.py
src/simulation_scripts/: simulation_runner.py  test_suite_reader.py  test_suite_runner.py
src/simulation_scripts/utils/: comparisons.py  excel_handler.py  (+2 more)
test/: test_binary_esam.py
test/data_generation_test/: data_generator_test.py
test/impl_test/: test_connections.py  test_hidden_neuron_population.py
(+8 files in other folders)
